-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.7.3, 6.7, 6.8.0 Beta2, 6.8, 6.9.0 FF
-
6.8
-
None
-
9aa5abbda (dev), bd4c78927 (6.8), adde3459d (6.7)
It seems that qmlls does not shutdown after receiving a shutdown request... That's probably the reason why it can't be restarted via the QtC restart language server button.
To reproduce, use following test (that currently fails: qmlls is still running after the 5 second timeout):
void tst_qmlls_modules::shutdown()
{
m_protocol->requestShutdown(nullptr, []() {});
m_protocol->notifyExit(nullptr);
QTRY_COMPARE_WITH_TIMEOUT(m_server.state(), QProcess::NotRunning, 5000);
QCOMPARE(m_server.exitStatus(), QProcess::NormalExit);
}
- is required for
-
QTCREATORBUG-31125 Various issues with QML LSP
-
- Closed
-
-
QTCREATORBUG-30406 Better user experience regarding restarting/auto-running qmlls
-
- Closed
-
- relates to
-
QTBUG-131702 qmlls sends an error when trying to stop on startup
-
- Open
-
- resulted in
-
QTBUG-131702 qmlls sends an error when trying to stop on startup
-
- Open
-
| For Gerrit Dashboard: QTBUG-124461 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 555554,14 | qmlls: stop reading from stdin after shutdown was received | dev | qt/qtdeclarative | Status: MERGED | +2 | +1 |
| 565711,2 | qmlls: stop reading from stdin after shutdown was received | 6.8 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 568150,2 | qmlls: stop reading from stdin after shutdown was received | 6.7 | qt/qtdeclarative | Status: MERGED | +2 | 0 |