qmlls: stop reading from stdin after shutdown was received

Stop reading from stdin after shutdown was initiated. Instead of reading
from stdin in a loop, stop after entire messages are read and wait for
a signal from QLanguageServer before reading the next message from stdin.

Adapt StdinReader to make it wait for a signal before reading another
message from stdin: all the stack variables from run() are made members,
a new slot readNextMessage() is added that reads the next message.

Don't read data from stdin after an EOF was encountered, and stop after
one entire message was received. When a message (or part of a message)
is emitted via receivedData(), a bool flag indicates whether the data is
the last part of the message.

StdinRead waits for the readNextMessage() signal after encountering
the last part of its current message.

Some platforms like windows 11 will read multiple messages in one go, so
make sure that receivedData() is only emitted once per buffer, even if
multiple messages are contained inside the buffer. Also wait for the
m_isReading flag to have a chance to be set before emitting
receivedData().

Note that a loop is still needed to fill the buffer, as
std::cin.readsome() will not read anything on some platforms, like
macos for example.

Fixes: QTBUG-124461
Task-number: QTCREATORBUG-30406
Change-Id: I6f164e640234af15a437e10d404ae62c40286099
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>
(cherry picked from commit 9aa5abbda76db44b7ead30c221675183285b420c)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit bd4c78927de8abcf22ae8640f4f572df6f292528)